--- a/package.json
+++ b/package.json
@@ -1,24 +1,22 @@
 {
-  "name": "mock-server-app",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kundusaikat/mock-server-app.git"
+    "start": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/kundusaikat/mock-server-app/issues"
-  },
-  "homepage": "https://github.com/kundusaikat/mock-server-app#readme",
   "dependencies": {
-    "json-server": "^0.17.1"
+    "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.8.0",
+    "nodemon": "^2.0.20"
   }
 }
